--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@ footer {
 <body>
     <header class="container">
         <div class="page-header">
-            <h1>aba-web <small>Assumption-Based Argumentation on Web</small></h1>
+            <h1>aba-web <small>Assumption-Based Argumentation Web Interface</small></h1>
         </div>
     </header>
     <main class="container">
@@ -153,7 +153,7 @@ contrary(c, r).
             <!-- Tab panes -->
             <div class="tab-content" id="tab-output-content">
                 <div class="tab-pane active fade in" id="output-argument"></div>
-                <div class="tab-pane active fade in" id="statistics"></div>
+                <div class="tab-pane fade in" id="statistics"></div>
             </div>
 
             </div>
@@ -379,24 +379,25 @@ contrary(c, r).
                 .start();
 
             // build the arrow.
+            // Note: http://jsfiddle.net/5qaL886d/1/ ; this breaks IE10
             svg.append("svg:defs").selectAll("marker")
-                .data(["end-" + el_name ])
+                .data(["start-" + el_name ])
                 .enter().append("svg:marker")
                 .attr("id", String)
-                .attr("viewBox", "0 -5 10 10")
-                .attr("refX", 15)
-                .attr("refY", -1.5)
+                .attr("viewBox", "-10 -5 10 10")
+                .attr("refX", -15)
+                .attr("refY", 0)
                 .attr("markerWidth", 6)
                 .attr("markerHeight", 6)
                 .attr("orient", "auto")
                 .append("svg:path")
-                .attr("d", "M0,-5L10,0L0,5");
+                .attr("d", "M0,5L-10,0L0,-5");
 
             var link = svg.append("svg:g").selectAll("path")
                 .data(graph.links)
                 .enter().append("svg:path")
                 .attr("class", "link")
-                .attr("marker-end", "url(#end-" + el_name + ")");
+                .attr("marker-start", "url(#start-" + el_name + ")");
                 // .on('mouseover', tipEdge.show)
                 // .on('mouseout', tipEdge.hide);
             
@@ -409,7 +410,7 @@ contrary(c, r).
                 
             node.append("circle")
                 .attr("class", "node_circle")
-                .attr("r", function(d) { return d.group == "root" ? 7 : 5; })
+                .attr("r", function(d) { return d.group == "root" ? 6 : 5; })
                 .style("fill", function(d) { return d.group == "root" ? rootColor(d.group) : color(d.group); })
 
                 .on('mouseover', tip.show)
