--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link href="//cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet">
     <style>
+body { padding-top: 30px; }
 #source_code {
     font-family: monospace;
 }
@@ -107,7 +108,30 @@ footer {
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">aba-web</a>
+            </div>
+            
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+            </div>
+        </div>
+    </nav>
     <header class="container">
+        
         <div class="page-header">
             <h1>aba-web <small>Assumption-Based Argumentation Web Interface</small></h1>
         </div>
