--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
     <link href="//cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/codemirror/4.5.0/codemirror.css" rel="stylesheet">
     <style>
-body { padding-top: 30px; }
 #source_code {
     font-family: monospace;
 }
@@ -67,6 +66,9 @@ svg {
 #debug {
     display: none;
 }
+#header {
+    margin-top: 0px;
+}
 footer {
     margin-top: 50px;
     padding-top: 25px;
@@ -108,7 +110,7 @@ footer {
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -124,23 +126,26 @@ footer {
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#help">Help</a></li>
             </ul>
             </div>
         </div>
     </nav>
-    <header class="container">
-        
-        <div class="page-header">
-            <h1>aba-web <small>Assumption-Based Argumentation Web Interface</small></h1>
-        </div>
+    <header id="header" class="container page-header">
+        <h1>aba-web <small>Assumption-Based Argumentation Web Interface</small></h1>
     </header>
-    <main class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-                <form id="form">
-                    <textarea id="source_code" rows="5">
+    <main id="main" class="container">
+        <div id="help" class="nav-main" style="display: none;">
+            <h2>Introduction</h2>
+            <h2>Features</h2>
+            <h2>Syntax</h2>
+        </div>
+        <div id="home" class="nav-main">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                    <form id="form">
+                        <textarea id="source_code" rows="5">
 q, r |- p.
 |- q.
 a |- r.
@@ -150,36 +155,37 @@ contrary(b, p).
 c |- d.
 assumption(c).
 contrary(c, r).
-                    </textarea>
-                    <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
-                </form>
-                <div id="parse-errors" class="text-danger"></div>
-                <div id="debug">
-                    
+                        </textarea>
+                        <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
+                    </form>
+                    <div id="parse-errors" class="text-danger"></div>
+                    <div id="debug">
+                        
+                    </div>
+                    <br />
                 </div>
-                <br />
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 fade" id="tab-output">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 fade" id="tab-output">
 
-            <!-- Nav tabs -->
-            <ul class="nav nav-tabs" id="tab-output-list">
-                <li class="active"><a href="#output-argument" data-toggle="tab">Arguments</a></li>
-                <li class="dropdown">
-                    <a id="output-dropdown-toggle" href="#" data-target="output-dropdown-dt" class="dropdown-toggle" data-toggle="dropdown">Dispute Trees <span class="caret"></span></a>
-                    <ul class="dropdown-menu" id="output-dropdown-dt">
-                    </ul>
-                </li>
-                <li><a href="#statistics" data-toggle="tab">Statistics</a></li>
-            </ul>
+                <!-- Nav tabs -->
+                <ul class="nav nav-tabs" id="tab-output-list">
+                    <li class="active"><a href="#output-argument" data-toggle="tab">Arguments</a></li>
+                    <li class="dropdown">
+                        <a id="output-dropdown-toggle" href="#" data-target="output-dropdown-dt" class="dropdown-toggle" data-toggle="dropdown">Dispute Trees <span class="caret"></span></a>
+                        <ul class="dropdown-menu" id="output-dropdown-dt">
+                        </ul>
+                    </li>
+                    <li><a href="#statistics" data-toggle="tab">Statistics</a></li>
+                </ul>
 
-            <!-- Tab panes -->
-            <div class="tab-content" id="tab-output-content">
-                <div class="tab-pane active fade in" id="output-argument"></div>
-                <div class="tab-pane fade in" id="statistics"></div>
-            </div>
+                <!-- Tab panes -->
+                <div class="tab-content" id="tab-output-content">
+                    <div class="tab-pane active fade in" id="output-argument"></div>
+                    <div class="tab-pane fade in" id="statistics"></div>
+                </div>
 
+                </div>
             </div>
         </div>
     </main>
@@ -198,6 +204,20 @@ contrary(c, r).
         // http://bl.ocks.org/mbostock/2706022
         // http://bl.ocks.org/d3noob/5141278
     $(document).ready(function () {
+        // Navigation
+        function onHashChange() {
+            var location = window.location.hash.toLowerCase();
+            if (["#home", "#help"].indexOf(location) === -1) {
+                location = "#home";
+            }
+            $(".nav-main").hide();
+            $(location).fadeIn();
+            $(".nav > .active").removeClass("active");
+            $("a[href='" + location + "']").parent().addClass("active");
+        }
+        onHashChange();
+        $(window).on('hashchange', onHashChange);
+
         var global_data = null;
         var code_mirror = CodeMirror.fromTextArea($("#source_code")[0], {
             indentUnit: 2,
