--- a/templates/index.html
+++ b/templates/index.html
@@ -151,15 +151,15 @@ footer {
             <p>Syntax for input area consists of multiple lines of codes, where each line can only be a single type of expression. There are three types of expression supported in the project, namely: </p>
             <ul>
                 <li>Rule<br />
-                <code>supporting |- claim.</code><br />
-                <p>Supporting symbols (supporting) are comma-separated symbols, meanwhile claim can only contains one symbol. A symbol is a string of continuous string of characters. A valid rule has supporting symbols appeared in other supported symbols or assumptions. </p>
+                <code><i>supporting</i> |- <i>claim</i>.</code><br />
+                <p>Supporting symbols (<i>supporting</i>) are comma-separated symbols, meanwhile <i>claim</i> can only contains one symbol. A symbol is a string of continuous string of characters. A valid rule has supporting symbols appeared in other supported symbols or assumptions. </p>
                 </li> 
                 <li>Contrary<br />
-                <code>contrary(a, b).</code><br />
-                <p>Meaning that argument containing a as assumption can be attacked by argument with b as its claim.</p></li>
+                <code>contrary(<i>a</i>, <i>b</i>).</code><br />
+                <p>Meaning that argument containing <i>a</i> as assumption can be attacked by argument with <i>b</i> as its claim.</p></li>
                 <li>Assumption<br />
-                <code>assumption(a).</code><br />
-                <p>Explicitly states that a is an assumption. Every assumption need to have its contrary.</p></li>
+                <code>assumption(<i>a</i>).</code><br />
+                <p>Explicitly states that <i>a</i> is an assumption. Every assumption need to have its contrary.</p></li>
             </ul>
             <h2>About</h2>
             A final year project by <a href="https://kenrick95.org">Kenrick</a>. Source is available on <a href="https://github.com/kenrick95/aba-web">GitHub</a> (private repo).
